Fix nav on mobile

--- a/main.css
+++ b/main.css
@@ -494,6 +494,11 @@ blockquote {
 /* mobile */
 
 @media only screen and (max-width : 480px) {
+  
+  .nav-wrapper {
+    width: 100%;
+  }
+  
 	.wrapper {
 		width: 90%;
     margin-left: 5%;
